--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_CONNECT_URI=mongodb+srv://appcreator:app123@cluster0.w2jmxap.mongodb.net/?retryWrites=true&w=majority
+MONGODB=mongodb+srv://appcreator:app123@cluster0.w2jmxap.mongodb.net/?retryWrites=true&w=majority
